// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Navigation component Should render guest user navigation 1`] = `
<nav
  className="nav"
>
  <div
    className="logo-container"
  >
    <img
      alt="logo"
      src="authLogo.svg"
    />
  </div>
  <div
    className="links-container"
  >
    <a
      className="desktop-link"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="desktop-link"
      href="/news"
      onClick={[Function]}
    >
      News
    </a>
    <a
      className="desktop-link"
      href="/videos"
      onClick={[Function]}
    >
      Videos
    </a>
    <a
      className="desktop-link"
      href="/schedule"
      onClick={[Function]}
    >
      Schedule
    </a>
    <a
      className="desktop-link"
      href="/standings"
      onClick={[Function]}
    >
      Standings
    </a>
    <a
      className="desktop-link"
      href="/drivers"
      onClick={[Function]}
    >
      Drivers
    </a>
    <a
      className="desktop-link"
      href="/teams"
      onClick={[Function]}
    >
      Teams
    </a>
  </div>
  <div
    className="auth-container"
  >
    <a
      className="link"
      href="/auth/login"
      onClick={[Function]}
    >
      Sign in
    </a>
    <a
      className="link"
      href="/auth/register"
      onClick={[Function]}
    >
      Register
    </a>
  </div>
</nav>
`;

exports[`test Navigation component Should render logged in user Navigation 1`] = `
<nav
  className="nav"
>
  <div
    className="logo-container"
  >
    <img
      alt="logo"
      src="authLogo.svg"
    />
  </div>
  <div
    className="links-container"
  >
    <a
      className="desktop-link"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="desktop-link"
      href="/news"
      onClick={[Function]}
    >
      News
    </a>
    <a
      className="desktop-link"
      href="/videos"
      onClick={[Function]}
    >
      Videos
    </a>
    <a
      className="desktop-link"
      href="/schedule"
      onClick={[Function]}
    >
      Schedule
    </a>
    <a
      className="desktop-link"
      href="/standings"
      onClick={[Function]}
    >
      Standings
    </a>
    <a
      className="desktop-link"
      href="/drivers"
      onClick={[Function]}
    >
      Drivers
    </a>
    <a
      className="desktop-link"
      href="/teams"
      onClick={[Function]}
    >
      Teams
    </a>
  </div>
  <div
    className="auth-container"
  >
    <a
      className="link"
      href="/auth/profile"
      onClick={[Function]}
    >
      Profile
    </a>
  </div>
</nav>
`;
